# rz-aigc

./: .gitignore  pyproject.toml
api/: Completions API.ipynb  client_router.py  clients.py  config.json
classify/: classify.py  infinity_instruct_classify.py
classify/datasets/chinese_cosmopedia/extracted_data/: chinese_cosmopedia.jsonl
classify/datasets/infinity_instruct/: infinity_instruct_classify.jsonl
dockerfile/: Dockerfile
eval/: evaluator.py  mmlu_evaluator.py
eval/datasets/extracted_data/: college-computer-science-test-00000-of-00001.csv
eval/dockerfile/: Dockerfile  command.txt  replace_model_paths.py
finetune/: build_dataset.ipynb
finetune/datasets/: test.jsonl
langchain/: callback_handler.py  chatbot.py  integrate_qwen3.ipynb  output_parsers.py
mmlu/: eval_prompts.py  evaluator.py  mmlu_evaluator.py  mmlu_evaluator_prompts.py
mmlu/datasets/: college-chemistry-test-00000-of-00001.parquet
mmlu/datasets/chinese_data/: chinese-college-chemistry-test-00000-of-00001.csv  chinese-college-computer-science-test-00000-of-00001.csv
mmlu/datasets/extracted_data/: college-chemistry-test-00000-of-00001.csv
prompts/: resume_optimization_prompt.txt  week_report_prompts.txt
synthesis/: data_synthesis_example.py
synthesis/data/: 三国演义.txt
synthesis/outputs/: qa_pairs.jsonl
synthesis/persona_driven/: constraint_selector.py  constraints.py  llm_client.py  persona_categories.py  persona_generator.py  prompt_builder.py  prompt_templates.py  run.py  utils.py
tools/: extractor.py  translator.py
(+2 files in other folders)
